refactor(hoc): rewire legacy app.api references to HOC

--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_incidents.historical_cost.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_incidents.historical_cost.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: incidents.historical_cost
-status: ASSUMED
+status: DECLARED
 source_panels:
 - INC-EV-HIST-O4
 domain: INCIDENTS
