--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_logs.llm_runs_list.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_logs.llm_runs_list.yaml
@@ -27,7 +27,7 @@ acceptance_criteria:
 implementation:
   endpoint: /api/v1/logs/llm-runs
   method: GET
-  handler: app.api.logs.list_llm_run_records
+  handler: app.hoc.api.cus.policies.logs.list_llm_run_records
   service: null  # Direct SQL query
 auth:
   roles: [admin, member]
