--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_activity.runs.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_activity.runs.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: activity.runs
-status: ASSUMED
+status: DECLARED
 source_panels:
 - ACT-LLM-COMP-O1
 domain: ACTIVITY
