--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_incidents.resolved_list.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_incidents.resolved_list.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: incidents.resolved_list
-status: ASSUMED
+status: DECLARED
 source_panels:
 - INC-EV-RES-O4
 domain: INCIDENTS
