--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_lessons.convert_to_draft.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_lessons.convert_to_draft.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: lessons.convert_to_draft
-status: ASSUMED
+status: DECLARED
 source_panels:
 - POL-GOV-DFT-O4
 domain: POLICIES
