--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_lessons.dismiss_or_defer.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_lessons.dismiss_or_defer.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: lessons.dismiss_or_defer
-status: ASSUMED
+status: DECLARED
 source_panels:
 - POL-GOV-DFT-O5
 domain: POLICIES
