--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_logs.system_list.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_logs.system_list.yaml
@@ -26,7 +26,7 @@ acceptance_criteria:
 implementation:
   endpoint: /api/v1/logs/system
   method: GET
-  handler: app.api.logs.list_system_records
+  handler: app.hoc.api.cus.policies.logs.list_system_records
   service: null  # Direct SQL query
 auth:
   roles: [admin, member]
