--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_policies.ethical_constraints.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_policies.ethical_constraints.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: policies.ethical_constraints
-status: ASSUMED
+status: DECLARED
 source_panels:
 - POL-GOV-LIB-O2
 domain: POLICIES
