--- a/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_policies.layer_metrics.yaml
+++ b/backend/AURORA_L2_CAPABILITY_REGISTRY/AURORA_L2_CAPABILITY_policies.layer_metrics.yaml
@@ -5,7 +5,7 @@
 # NOTE: OBSERVED/TRUSTED status is preserved during sync (PIN-432)
 #
 capability_id: policies.layer_metrics
-status: ASSUMED
+status: DECLARED
 source_panels:
 - POL-GOV-ACT-O5
 domain: POLICIES
