chore(env): declare DB_AUTHORITY in .env.example (DB-AUTH-001)

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ HOST=0.0.0.0
 # ===========================================
 # Database
 # ===========================================
+# DB-AUTH-001 invariant: authority must be explicitly declared
+DB_AUTHORITY=local
+# Use DB_AUTHORITY=neon for prod-like/Neon execution contexts
 # Password managed in Vault: agenticverz/database
 DATABASE_URL=postgresql://nova:VAULT_MANAGED@localhost:6432/nova_aos
 
