--- a/.github/workflows/integration-integrity.yml
+++ b/.github/workflows/integration-integrity.yml
@@ -55,8 +55,8 @@ jobs:
           EXIT_CODE=${PIPESTATUS[0]}
 
           # Count results
-          PASSED=$(grep -c "PASSED" /tmp/lit-output.txt || echo "0")
-          FAILED=$(grep -c "FAILED" /tmp/lit-output.txt || echo "0")
+          PASSED=$(grep -c "PASSED" /tmp/lit-output.txt || true)
+          FAILED=$(grep -c "FAILED" /tmp/lit-output.txt || true)
 
           echo "passed=$PASSED" >> $GITHUB_OUTPUT
           echo "failed=$FAILED" >> $GITHUB_OUTPUT
@@ -226,8 +226,8 @@ jobs:
           EXIT_CODE=${PIPESTATUS[0]}
 
           # Count results
-          PASSED=$(grep -c "✓" /tmp/bit-output.txt || echo "0")
-          FAILED=$(grep -c "✘" /tmp/bit-output.txt || echo "0")
+          PASSED=$(grep -c "✓" /tmp/bit-output.txt || true)
+          FAILED=$(grep -c "✘" /tmp/bit-output.txt || true)
 
           echo "passed=$PASSED" >> $GITHUB_OUTPUT
           echo "failed=$FAILED" >> $GITHUB_OUTPUT
