ci: remediate SQL guard, priority5 paths, skill tests, and DB role gate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ on:
 
 env:
   PYTHONPATH: backend
+  DB_ROLE: staging
 
 jobs:
   # ============================================================================
