ci: apply skeptical remediation pass and document residual governance blockers

--- a/.github/workflows/c1-telemetry-guard.yml
+++ b/.github/workflows/c1-telemetry-guard.yml
@@ -35,6 +35,8 @@ on:
 
 env:
   PYTHONPATH: backend
+  DB_AUTHORITY: local
+  DB_ROLE: staging
 
 jobs:
   # ============================================================================
