--- a/.github/workflows/c2-regression.yml
+++ b/.github/workflows/c2-regression.yml
@@ -37,6 +37,8 @@ on:
 
 env:
   PYTHONPATH: backend
+  DB_AUTHORITY: local
+  DB_ROLE: staging
 
 jobs:
   # ============================================================================
