--- a/.github/workflows/integration-integrity.yml
+++ b/.github/workflows/integration-integrity.yml
@@ -17,6 +17,8 @@ on:
 
 env:
   PYTHONPATH: backend
+  DB_AUTHORITY: local
+  DB_ROLE: staging
 
 jobs:
   # ============================================================================
