--- a/.github/workflows/layer-segregation.yml
+++ b/.github/workflows/layer-segregation.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [main, develop]
     paths:
-      - 'backend/app/**/*.py'
+      - 'backend/app/hoc/**/*.py'
   pull_request:
     branches: [main, develop]
     paths:
-      - 'backend/app/**/*.py'
+      - 'backend/app/hoc/**/*.py'
 
 jobs:
   layer-guard:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Layer Segregation Guard
         run: |
-          python3 scripts/ops/layer_segregation_guard.py --ci
+          python3 scripts/ops/layer_segregation_guard.py --ci --scope hoc
         working-directory: ${{ github.workspace }}
 
       - name: Run Shim Kill Guard
