hoc: execute CUS capability sweep wave C1 (929->851)

--- a/docs/capabilities/CAPABILITY_REGISTRY.yaml
+++ b/docs/capabilities/CAPABILITY_REGISTRY.yaml
@@ -660,6 +660,8 @@ capabilities:
         - "/backend/app/services/governance/validator_service.py"
         - "/backend/app/services/governance/job_executor.py"
         - "/backend/app/services/governance/eligibility_engine.py"
+        - "/backend/app/hoc/cus/hoc_spine/authority/contracts/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/authority/contracts/contract_engine.py"
       l2_api:
         - "/backend/app/api/discovery.py"                # PIN-311: Unmapped file resolution
 
@@ -706,6 +708,82 @@ capabilities:
         - "/backend/app/hoc/int/analytics/engines/runner.py"
         - "/backend/app/hoc/int/logs/drivers/pool.py"
         - "/backend/app/hoc/int/general/drivers/artifact.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/anomaly_incident_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/account_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/activity_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/analytics_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/api_keys_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/controls_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/incidents_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/integrations_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/logs_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/overview_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/bridges/policies_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/canary_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/domain_bridge.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/evidence_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/execution_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/leadership_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/lessons_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/provenance_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/replay_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/run_evidence_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/run_proof_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/signal_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/signal_feedback_coordinator.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/coordinators/snapshot_scheduler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/execution/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/execution/job_executor.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/account_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/activity_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/agent_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_config_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_metrics_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_prediction_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_sandbox_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_snapshot_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/analytics_validation_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/api_keys_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/circuit_breaker_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/controls_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/governance_audit_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/idempotency_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/incidents_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/integration_bootstrap_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/integrations_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/integrity_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/killswitch_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/knowledge_planes_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/lifecycle_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/logs_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/m25_integration_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/mcp_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/onboarding_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/ops_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/orphan_recovery_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/overview_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/platform_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/policies_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/policies_sandbox_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/policy_approval_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/policy_governance_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/proxy_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/run_governance_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/system_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/handlers/traces_handler.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/drivers/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/drivers/execution.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/drivers/knowledge_plane.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/engines/__init__.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/engines/offboarding.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/engines/onboarding.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/engines/pool_manager.py"
+        - "/backend/app/hoc/cus/hoc_spine/orchestrator/lifecycle/stages.py"
 
     gaps: []  # No gaps - CLOSED
 
